<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/sourceImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/usatoday"
                android:contentDescription="@string/source_logo" />

            <TextView
                android:id="@+id/sourceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/usaToday"
                android:layout_gravity="center"

                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/articleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_title"
                    android:textColor="@color/textBlack"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:maxLines="4"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/articleImage"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/technology"
                android:scaleType="centerCrop"
                android:contentDescription="@string/article_image_desc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/articleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/textGrey"
                android:text="@string/article_date"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>